# nekro-plugin-affection

./: MEMORY.md  batch_evaluate_plugins.py  cookies.txt  plugins_analysis.json  plugins_complete_data.json  plugins_detailed_data.json  plugins_full_detailed.json  plugins_raw_data.json  plugins_stats.json
memory/: 2025-01-25.md  2026-01-29.md  2026-01-30.md  INDEX.md  builtin_plugins_final_analysis.md  clawdbot_to_nekro_agent_analysis.md  daily_report_2026-01-29.md  github_subscription_config.md  plugin_development_final_report.md  plugin_development_mastery.md  plugin_evaluation_framework.md  plugin_market_top10_report.md  workflow.md
memory-space/: LATEST_SYNC.md  README.md  sync_status.json
memory-space/configs/clawdbot/: TOOLS.md
memory-space/credentials/: CREDENTIALS.md
memory-space/memory/: IDENTITY.md  MEMORY.md  USER.md
memory-space/memory/daily/: 2026-01-29-afternoon.md  2026-01-29.md  builtin_plugins_analysis.md  ecosystem_knowledge_base.md  exploration_complete.md  knowledge_base.md  plugin_development_complete_guide.md  plugin_development_study.md  plugin_market_research.md  plugin_market_top10_report_v2.md  research_nekro_agent_2026-01-29.md  tasks_summary.md
memory-space/projects/active/01_projects/nekro-agent-async-tasks/: 01_async_task_analysis.md  README.md  RESEARCH_NOTES.md
memory-space/projects/active/01_projects/nekro-agent-sandbox-analysis/: 01_sandbox_permission_analysis.md  02_compatibility_analysis.md  03_unified_upgrade_assessment.md  04_automation_development_flow.md  (+1 more)
memory-space/projects/archived/04_archive/: 00_changelog_summary_v2.0-v2.2.md  00_research_plan.md  04_changelog_v2style.md
memory-space/skills/available/: skill_list.txt
memory-space/skills/custom/: release_skill.md
memory-space/tools/: restore.sh  sync.sh
memory/evaluations/: COMPLETE_EVALUATION_REPORT.md  final_evaluation_results.json  magic_draw_evaluation.md  quick_evaluation_results.json  top10_quick_report.md
nekro-plugin-affection/: README.md  __init__.py  plugin.py  pyproject.toml
skills/: release-checklist.md
